Tue, 15 Jul 2008 10:06:19 +0200 <thp@perli.net>
Do not hide podcast cover and pill pixbuf in podcast list by default

	* src/gpodder/config.py: Change default settings

Tue, 15 Jul 2008 09:54:57 +0200 <thp@perli.net>
Support saving multiple episodes to disk (reported by: O. Emmerson)

	* src/gpodder/gui.py: Make sure that we support saving multiple
	selections for the "Save to disk" context menu item

Mon, 14 Jul 2008 15:18:04 -0400 <me@nikosapi.org>
Always show downloaded episodes (Patch from Justin Forest)

	* src/gpodder/dbsqlite.py: Include downloaded episodes even when they 
	go beyond the episode limit.  e.g., when you have 
	gl.max_episodes_per_feed set to 10, but there are 20 downloaded ones
	already.  With this patch, all 20 episodes are displayed.

Mon, 14 Jul 2008 12:31:15 -0400 <me@nikosapi.org>
Merge patch to fix bug #122 (Day of week Released date not computed correctly)

	* src/gpodder/libpodcasts.py: use rfc822.mktime_tz() to convert
	timestamps from feedparser's _parse_date() function to seconds from
	the epoch (in UTC instead of the local timezone)
	* src/gpodder/util.py: fix util.format_date() so that when it reports
	'Today', it means the timestamp is from after 00:00 local time

Mon, 14 Jul 2008 12:21:37 -0400 <me@nikosapi.org>
Merge patch to fix bug #125 (Deleting a podcast while checking for new
episodes allows a second concurrent sync.)

	* src/gpodder/gui.py: make update_feed_cache() check if the feed cache
	is being updated before allowing an update to take place

Sun, 13 Jul 2008 15:32:22 -0400 <me@nikosapi.org>
Fix python 2.4 crash (reported by: Wilfred van Rooijen)

	* src/gpodder/draw.py: change ".5 if close else 0" to valid python
	2.4 syntax

Sun, 13 Jul 2008 15:19:39 -0400 <me@nikosapi.org>
Fix MP3PlayerDevice traceback when syncing (reported by: Wilfred van Rooijen)

	* src/gpodder/sync.py: make Device.__track_on_device() non-private

Sat, 12 Jul 2008 14:12:11 +0200 <jerome.chabod@ifrance.com>